internal/ast/testdata/tests/errors/contracts/bad_else_body.rql
contract BadBody() -> void {
    if x {

    } else {
        #
    }
}
